# zad5_3-xHeler

./: CMakeLists.txt  README.md  initialize.sh
docs/: Doxyfile.in
inc/: Colorable.h  Command.h  Cuboid.h  Drawable.h  Drone.h  Figure.h  Flat.h  Gnuplot.h  Hitbox.h  Matrix.h  Moveable.h  Obstacle.h  Polygon.h  Pyramid.h  Quaternion.h  Rotor.h  Scene.h  Slope.h  Trunk.h  Vector.h
src/: Cuboid.cpp  Drone.cpp  Flat.cpp  Hitbox.cpp  Pyramid.cpp  Quaternion.cpp  Rotor.cpp  Scene.cpp  Slope.cpp  Trunk.cpp  main.cpp
test/: TestCollision.cpp  TestMatrix.cpp  TestQuaternion.cpp  TestVector.cpp
